// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextAreaInput /> > labelTitle > sets label 1`] = `
<div
  class="form-control w-full "
>
  <label
    class="label"
  >
    <span
      class="label-text text-base-content "
    >
      My Title
    </span>
  </label>
  <textarea
    class="textarea textarea-bordered w-full leading-5 "
    placeholder=""
    required=""
  />
</div>
`;

exports[`<TextAreaInput /> > renders properly 1`] = `
<div
  class="form-control w-full "
>
  <textarea
    class="textarea textarea-bordered w-full leading-5 "
    placeholder=""
    required=""
  />
</div>
`;
